# UpStorage

./: CMakeLists.txt  fields_values.cpp  fields_values.h  graph.qrc  graphics.cpp  graphics.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
